# ipmi-fan-speed-service

./: .gitignore  Makefile  README.md  pyproject.toml
src/ipmi_fan_speed_service/: __init__.py  main.py  utils.py
tests/: test_main.py
