[project]
name = "ipmi-fan-speed-service"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Nathan Morris", email = "nmorris@uwhealth.org" }
]
dependencies = [
    "python-ipmi>=0.5.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ipmi_fan_speed_service"]
